[tool.poetry]
name = "kaggle-competition"
version = "0.1.0"
description = "project for kaggle competition"
authors = ["kewei chen <gosienna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
