[tool.poetry]
name = "kaggle-competition"
version = "0.1.0"
description = "project for kaggle competition"
authors = ["kewei chen <gosienna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
numpy = ">=1.19.2"
pyarrow = "^15.0.0"
tensorflow_gpu = "2.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
